--- a/extension/index.htm
+++ b/extension/index.htm
@@ -26,8 +26,8 @@
     <hr>
     <p><b>1. Have you ever heard about RealMinTech?</b></p>
     <form action="index.htm/action-page.php">
-        <input type="radio"value="Yes"> Yes<br>
-        <input type="radio"value="No"> No<br>
+        <input type="radio"value="Yes" name="ever"> Yes<br>
+        <input type="radio"value="No" name="ever"> No<br>
       </form> 
     <p><b>2. How do you learn about our site?</b></p>
     <form action="index.htm/action-page.php">
@@ -36,33 +36,33 @@
       </form>
     <p><b>3. Have you read about my portfolio?</b></p>
     <form action="index.htm/action-page.php">
-        <input type="radio"value="Yes"> Yes<br>
-        <input type="radio"value="No"> No<br>
+        <input type="radio"value="Yes" name="read"> Yes<br>
+        <input type="radio"value="no" name="read"> No<br>
       </form> 
       <p>If no,you can read through it using this link</p>
     <a href="https://realmintech.github.io/mynewProject/">:Click here</a>
     <p><b>4. How old are you?</b></p>
     <form action="index.htm/action-page.php">
-        <input type="radio"value="number"> Under 18<br>
-        <input type="radio"value="number"> 18 and above<br>
+        <input type="radio"value="number" name="age"> Under 18<br>
+        <input type="radio"value="number" name="age"> 18 and above<br>
       </form> 
     <p><b>5.Did you know about our latest project?</b></p>
     <form action="index.htm/action-page.php">
-        <input type="radio"value="Yes"> Yes<br>
-        <input type="radio"value="No"> No<br>
+        <input type="radio"value="Yes" name="our"> Yes<br>
+        <input type="radio"value="No" name="our"> No<br>
       </form> 
     <p><b>6.How likely do you recommend us?</b></p>
     <form action="index.htm/action-page.php">
-        <input type="radio"value="answer">3- Very likely<br>
-        <input type="radio"value="answer">2- Somewhat likely<br>
-        <input type="radio"value="answer">1- Somewhat unlikely<br>
+        <input type="radio"value="answer" name="you">3- Very likely<br>
+        <input type="radio"value="answer" name="you">2- Somewhat likely<br>
+        <input type="radio"value="answer" name="you">1- Somewhat unlikely<br>
       </form> 
     <img src="../IMAGES/RealMinTech.jpg" width="120px" height="120px">
     <p><b>7.Which do you prefer we use as our brand logo? This or the one at the home page.</b></p>
     <form action="index.htm/action-page.php">
-        <input type="radio"value="Yes"> I prefer this<br>
-        <input type="radio"value="No"> The homepage design is better<br>
-        <input type="button"name="submit"value="Submit">
+        <input type="radio"value="Yes" name="use"> I prefer this<br>
+        <input type="radio"value="No" name="use"> The homepage design is better<br>
+        <input type="submit">
       </form> 
 <h1>Thanks for going through my survey page.</h1>
 <p>Regards.......</p>
